--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,5 +1,7 @@
-fastapi==0.104.1
-uvicorn[standard]==0.24.0
-pydantic==2.5.0
-python-multipart==0.0.6
-psycopg2-binary==2.9.9
+fastapi>==0.104.1
+uvicorn[standard]>==0.24.0
+pydantic>==2.5.0
+python-multipart>==0.0.6
+psycopg2-binary>==2.9.9
+firebase-admin>==7.1.0
+email-validator>=2.0.0
