--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,8 +29,7 @@ services:
       POSTGRES_USER: portfoliouser
       POSTGRES_PASSWORD: portfoliopass
       NODE_ENV: development
-      FIREBASE_AUTH_EMULATOR_HOST: firebase-emulator:9099
-      FIRESTORE_EMULATOR_HOST: firebase-emulator:8080
+      FIREBASE_EMULATOR_HOST: localhost:9099
     depends_on:
       db:
         condition: service_healthy
