backend wiring for auth draft done

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,7 +1,13 @@
-fastapi>==0.104.1
-uvicorn[standard]>==0.24.0
-pydantic>==2.5.0
-python-multipart>==0.0.6
-psycopg2-binary>==2.9.9
-firebase-admin>==7.1.0
-email-validator>=2.0.0
+fastapi==0.124.4
+uvicorn[standard]==0.38.0
+pydantic==2.12.5
+python-multipart==0.0.20
+psycopg2-binary==2.9.11
+firebase-admin==7.1.0
+email-validator==2.3.0
+python-jose[cryptography]==3.5.0
+PyJWT==2.10.1
+passlib[bcrypt]==1.7.4
+APScheduler==3.11.1
+databases[asyncpg]==0.9.0
+slowapi==0.1.9
