--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,16 @@
+__pycache__/
+*.pyc
+*.pyo
+*.pyd
+*.sqlite3
+.env
+.env.*
+.vscode/
+.DS_Store
+.idea/
+dist/
+build/
+*.log
+*.sqlite
 node_modules
+.svelte-kit/
